--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Explore exotic destinations with our travel agency. Book flights, hotels, and tours.">
+    <meta name="keywords" content="travel visa, work visa, traveller, business travel, tourism, tours, flights, hotels, vacation">
+    <meta name="author" content="Your Travel Agency Name">
+
+
+	
 	<title>FlyGoWell</title>
 
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700' rel='stylesheet'
