--- a/about.html
+++ b/about.html
@@ -285,7 +285,7 @@
 				<div class="f-item" id="cardf" >
 					<div class="tm-about-box-1">
 						<a href="#"><img src="img/ceo_image.png" alt="img" class="tm-about-box-1-img"></a>
-						<h3 class="tm-about-box-1-title">Mr. Abul Jaish Ahmad<span> CEO </span></h3>
+						<h3 class="tm-about-box-1-title">Mr. Abul Jaish Ahmad <br> <span> CEO </span></h3>
 						<p class="margin-bottom-15 gray-text">Our company stands resilient by newfound energy. Specializing in delivering seamless experiences to our clients, we have relationships with over 50 global companies </p>
 						<div class="gray-text social-icon-div">
 
@@ -300,7 +300,7 @@
 				<div class="f-item" id="cardf" >
 					<div class="tm-about-box-1">
 						<a href="#"><img src="img/director_image.png" alt="img" class="tm-about-box-1-img"></a>
-						<h3 class="tm-about-box-1-title">Mrs. Shahla Parveen <span> Director </span></h3>
+						<h3 class="tm-about-box-1-title">Mrs. Shahla Parveen <br> <span> Director </span></h3>
 						<p class="margin-bottom-15 gray-text"> We extend our heartfelt gratitude. We cherish the opportunity to explore the world with you and eagerly welcome new partners to join us on this exciting journey </p>
 						<div class="gray-text social-icon-div">
 
@@ -315,7 +315,7 @@
 				<div class="f-item" id="cardf" >
 					<div class="tm-about-box-1">
 						<a href="#"><img src="img/technical_head.png" alt="img" class="tm-about-box-1-img"></a>
-						<h3 class="tm-about-box-1-title">Mr. Syed Laraib Hussain <span>Technical Head</span></h3>
+						<h3 class="tm-about-box-1-title">Mr. Syed Laraib Hussain <br> <span>Technical Head</span></h3>
 						<p class="margin-bottom-15 gray-text"> A unique blend of curiosity, creativity and technical expertise is something that I live for. I focus on the growth, development and online security of the company.</p>
 						<div class="gray-text social-icon-div">
 
