--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Explore exotic destinations with our travel agency. Book flights, hotels, and tours.">
-    <meta name="keywords" content="travel visa, work visa, traveller, business travel, tourism, tours, flights, hotels, vacation">
+    <meta name="keywords" content="travel visa, flygowell, gowell ,work visa, traveller, business travel, tourism, tours, flights, hotels, vacation">
     <meta name="author" content="Your Travel Agency Name">
 
 
@@ -270,14 +270,14 @@
 
 			<div class="col-lg-4 col-md-4 col-sm-6">
 				<div class="tm-home-box-1 tm-home-box-1-2 tm-home-box-1-center effect2">
-					<img src="img/index-01.jpg" alt="image" class="arz-img-responsive">
+					<img src="https://source.unsplash.com/346x344/?Turkey,travel" alt="image" class="arz-img-responsive">
 					<div class="arz-overlay">
 						<div class="arz-title">Explore</div>
-						<p class="arz-titleAdd">The beauty of Shimla</p>
+						<p class="arz-titleAdd">The beauty of Turkey</p>
 					</div>
 					<a href="#">
 						<div class="tm-green-gradient-bg tm-city-price-container">
-							<span>Shimla</span>
+							<span>Turkey</span>
 							<span>₹40000</span>
 						</div>
 					</a>
@@ -285,15 +285,15 @@
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6">
 				<div class="tm-home-box-1 tm-home-box-1-2 tm-home-box-1-right effect2">
-					<img src="img/index-02.jpg" alt="image" class="arz-img-responsive">
+					<img src="https://source.unsplash.com/346x344/?East Asia,travel" alt="image" class="arz-img-responsive">
 					<div class="arz-overlay">
 						<div class="arz-title">Explore</div>
-						<p class="arz-titleAdd">The beauty of Kashmir</p>
+						<p class="arz-titleAdd">The beauty of South-East Asia</p>
 					</div>
 					<a href="#">
 						<div class="tm-red-gradient-bg tm-city-price-container">
-							<span>Kashmir</span>
-							<span>₹16000</span>
+							<span>South-East Asia</span>
+							<span>₹36000</span>
 						</div>
 					</a>
 				</div>
@@ -317,9 +317,9 @@
 			<div class="row reveal">
 				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
 					<div class="tm-home-box-2">
-						<img src="img/index-03.jpg" alt="image" class="img-responsive">
-						<h3>Goa beach</h3>
-						<p class="tm-date">28 March 2022</p>
+						<img src="https://source.unsplash.com/254x186/?Singapore,travel" alt="image" class="img-responsive">
+						<h3>Singapore</h3>
+						<p class="tm-date">Get 5% off today</p>
 						<div class="tm-home-box-2-container">
 							<a href="" class="tm-home-box-2-link"><i
 									class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
@@ -332,9 +332,9 @@
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
 					<div class="tm-home-box-2">
-						<img src="img/index-04.jpg" alt="image" class="img-responsive">
-						<h3>Rajasthan desert</h3>
-						<p class="tm-date">26 March 2022</p>
+						<img src="https://source.unsplash.com/254x186/?Dubai,travel" alt="image" class="img-responsive">
+						<h3>Dubai</h3>
+						<p class="tm-date">Get 7% off</p>
 						<div class="tm-home-box-2-container">
 							<a href="#" class="tm-home-box-2-link"><i
 									class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
@@ -347,9 +347,9 @@
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
 					<div class="tm-home-box-2">
-						<img src="img/index-05.jpg" alt="image" class="img-responsive">
-						<h3>Konkan railway journey</h3>
-						<p class="tm-date">24 March 2016</p>
+						<img src="https://source.unsplash.com/254x186/?Australia,travel" alt="image" class="img-responsive">
+						<h3>Australia</h3>
+						<p class="tm-date">Get 3% off</p>
 						<div class="tm-home-box-2-container">
 							<a href="#" class="tm-home-box-2-link"><i
 									class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
@@ -362,9 +362,9 @@
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
 					<div class="tm-home-box-2 tm-home-box-2-right">
-						<img src="img/index-06.jpg" alt="image" class="img-responsive">
-						<h3>Assam jungles</h3>
-						<p class="tm-date">22 March 2016</p>
+						<img src="https://source.unsplash.com/254x186/?Europe,travel" alt="image" class="img-responsive">
+						<h3>Europe</h3>
+						<p class="tm-date">Get flat 2.5% off</p>
 						<div class="tm-home-box-2-container">
 							<a href="#" class="tm-home-box-2-link"><i
 									class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
@@ -434,12 +434,11 @@
 				<div class="col-lg-6">
 					<div class="tm-home-box-3">
 						<div class="tm-home-box-3-img-container">
-							<img src="img/index-07.jpg" alt="image" class="img-responsive">
+							<img src="https://source.unsplash.com/250x225/?England,travel" alt="image" class="img-responsive">
 						</div>
 						<div class="tm-home-box-3-info">
-							<p class="tm-home-box-3-description"><b>Kanyakumari :</b> From scenic beaches
-								to alluring temples, Kanyakumari includes some of the best sceneries you will ever
-								witness.</p>
+							<p class="tm-home-box-3-description"><b>England :</b> From beautiful river thames
+								to alluring Palace, England includes some of these beauties.</p>
 							<div class="tm-home-box-2-container">
 								<a href="#" class="tm-home-box-2-link"><i
 										class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
@@ -454,10 +453,10 @@
 				<div class="col-lg-6">
 					<div class="tm-home-box-3 reveal">
 						<div class="tm-home-box-3-img-container">
-							<img src="img/index-08.jpg" alt="image" class="img-responsive">
+							<img src="https://source.unsplash.com/250x225/?Thailand,travel" alt="image" class="img-responsive">
 						</div>
 						<div class="tm-home-box-3-info">
-							<p class="tm-home-box-3-description"><b>Varanasi : </b> A vacation to this spiritual land is
+							<p class="tm-home-box-3-description"><b>Thailand : </b> A vacation to this spiritual land is
 								one of
 								those few experiences of a lifetime that one can’t afford to miss out.</p>
 							<div class="tm-home-box-2-container">
@@ -474,10 +473,10 @@
 				<div class="col-lg-6">
 					<div class="tm-home-box-3 reveal">
 						<div class="tm-home-box-3-img-container">
-							<img src="img/index-09.jpg" alt="image" class="img-responsive">
+							<img src="https://source.unsplash.com/250x225/?China,travel" alt="image" class="img-responsive">
 						</div>
 						<div class="tm-home-box-3-info">
-							<p class="tm-home-box-3-description"><b>Kashmir :</b> Enclosed by the Himalayas,surrounded
+							<p class="tm-home-box-3-description"><b>China :</b> Enclosed by the Great wall of China,surrounded
 								by lush valleys, this is a holiday destination to fall in love with.</p>
 							<div class="tm-home-box-2-container">
 								<a href="#" class="tm-home-box-2-link"><i
@@ -493,10 +492,10 @@
 				<div class="col-lg-6">
 					<div class="tm-home-box-3 reveal">
 						<div class="tm-home-box-3-img-container">
-							<img src="img/index-10.jpg" alt="image" class="img-responsive">
+							<img src="https://source.unsplash.com/250x225/?Canada,travel" alt="image" class="img-responsive">
 						</div>
 						<div class="tm-home-box-3-info">
-							<p class="tm-home-box-3-description"><b>Kedarnath :</b> This place is a lush
+							<p class="tm-home-box-3-description"><b>Canada :</b> This place is a lush
 								green region with meandering rivers, snow-clad peaks and offers complete serenity.</p>
 							<div class="tm-home-box-2-container">
 								<a href="#" class="tm-home-box-2-link"><i
@@ -512,10 +511,10 @@
 				<div class="col-lg-6">
 					<div class="tm-home-box-3 reveal">
 						<div class="tm-home-box-3-img-container">
-							<img src="img/index-12.jpg" alt="image" class="img-responsive">
+							<img src="https://source.unsplash.com/250x225/?Mauritius,travel" alt="image" class="img-responsive">
 						</div>
 						<div class="tm-home-box-3-info">
-							<p class="tm-home-box-3-description"><b>Triupathi Balaji :</b> Sri Venkateswara Swami Vaari Temple is a Hindu temple situated in the hill town of Tirumala at Tirupati,India.</p>
+							<p class="tm-home-box-3-description"><b>Mauritius :</b> This is a beautiful place for a holiday destination. Beaches here are the main highlights</p>
 							<div class="tm-home-box-2-container">
 								<a href="#" class="tm-home-box-2-link"><i
 										class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
@@ -657,4 +656,4 @@
 	<script type="text/javascript" src="./js/onscrollReveal.js"></script>
 </body>
 
-</html>
+		</html>
