--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
 			<div class="col-lg-4 col-md-4 col-sm-6">
 				<div class="tm-home-box-1 tm-home-box-1-2 tm-home-box-1-center effect2">
-					<img src="https://source.unsplash.com/346x344/?Turkey,travel" alt="image" class="arz-img-responsive">
+					<img src="https://images.unsplash.com/photo-1589561454226-796a8aa89b05?q=80&w=2367&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image" class="arz-img-responsive">
 					<div class="arz-overlay">
 						<div class="arz-title">Explore</div>
 						<p class="arz-titleAdd">The beauty of Turkey</p>
