--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
 				<div class="col-lg-6">
 					<div class="tm-home-box-3 reveal">
 						<div class="tm-home-box-3-img-container">
-							<img src="img/index-13.jpg" alt="image" class="img-responsive">
+							<img src="https://images.unsplash.com/photo-1534687683191-2eea236e5902?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.jpg" alt="image" class="img-responsive">
 						</div>
 						<div class="tm-home-box-3-info">
 							<p class="tm-home-box-3-description"><b>Imagicaa :</b> Imagicaa is a  theme park in Khopoli India. <br>
