--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 						<div class="arz-title">Explore</div>
 						<p class="arz-titleAdd">The beauty of Turkey</p>
 					</div>
-					<a href="#">
+					<a href="http://wa.link/gzzbm6">
 						<div class="tm-green-gradient-bg tm-city-price-container">
 							<span>Turkey</span>
 							<span>₹40000</span>
@@ -290,7 +290,7 @@
 						<div class="arz-title">Explore</div>
 						<p class="arz-titleAdd">The beauty of South-East Asia</p>
 					</div>
-					<a href="#">
+					<a href="http://wa.link/gzzbm6">
 						<div class="tm-red-gradient-bg tm-city-price-container">
 							<span>South-East Asia</span>
 							<span>₹36000</span>
@@ -321,11 +321,11 @@
 						<h3>Singapore</h3>
 						<p class="tm-date">Get 5% off today</p>
 						<div class="tm-home-box-2-container">
-							<a href="" class="tm-home-box-2-link"><i
+							<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 									class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
-							<a href="#" class="tm-home-box-2-link"><span
+							<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><span
 									class="tm-home-box-2-description">Travel</span></a>
-							<a href="#" class="tm-home-box-2-link"><i
+							<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 									class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
 						</div>
 					</div>
@@ -336,11 +336,11 @@
 						<h3>Dubai</h3>
 						<p class="tm-date">Get 7% off</p>
 						<div class="tm-home-box-2-container">
-							<a href="#" class="tm-home-box-2-link"><i
+							<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 									class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
-							<a href="#" class="tm-home-box-2-link"><span
+							<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><span
 									class="tm-home-box-2-description">Travel</span></a>
-							<a href="#" class="tm-home-box-2-link"><i
+							<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 									class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
 						</div>
 					</div>
@@ -351,11 +351,11 @@
 						<h3>Australia</h3>
 						<p class="tm-date">Get 3% off</p>
 						<div class="tm-home-box-2-container">
-							<a href="#" class="tm-home-box-2-link"><i
+							<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 									class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
-							<a href="#" class="tm-home-box-2-link"><span
+							<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><span
 									class="tm-home-box-2-description">Travel</span></a>
-							<a href="#" class="tm-home-box-2-link"><i
+							<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 									class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
 						</div>
 					</div>
@@ -366,11 +366,11 @@
 						<h3>Europe</h3>
 						<p class="tm-date">Get flat 2.5% off</p>
 						<div class="tm-home-box-2-container">
-							<a href="#" class="tm-home-box-2-link"><i
+							<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 									class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
-							<a href="#" class="tm-home-box-2-link"><span
+							<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><span
 									class="tm-home-box-2-description">Travel</span></a>
-							<a href="#" class="tm-home-box-2-link"><i
+							<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 									class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
 						</div>
 					</div>
@@ -440,11 +440,11 @@
 							<p class="tm-home-box-3-description"><b>England :</b> From beautiful river thames
 								to alluring Palace, England includes some of these beauties.</p>
 							<div class="tm-home-box-2-container">
-								<a href="#" class="tm-home-box-2-link"><i
+								<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 										class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
-								<a href="#" class="tm-home-box-2-link"><span
+								<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><span
 										class="tm-home-box-2-description box-3">Travel</span></a>
-								<a href="#" class="tm-home-box-2-link"><i
+								<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 										class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
 							</div>
 						</div>
@@ -460,11 +460,11 @@
 								one of
 								those few experiences of a lifetime that one can’t afford to miss out.</p>
 							<div class="tm-home-box-2-container">
-								<a href="#" class="tm-home-box-2-link"><i
+								<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 										class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
-								<a href="#" class="tm-home-box-2-link"><span
+								<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><span
 										class="tm-home-box-2-description box-3">Travel</span></a>
-								<a href="#" class="tm-home-box-2-link"><i
+								<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 										class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
 							</div>
 						</div>
@@ -479,11 +479,11 @@
 							<p class="tm-home-box-3-description"><b>China :</b> Enclosed by the Great wall of China,surrounded
 								by lush valleys, this is a holiday destination to fall in love with.</p>
 							<div class="tm-home-box-2-container">
-								<a href="#" class="tm-home-box-2-link"><i
+								<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 										class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
-								<a href="#" class="tm-home-box-2-link"><span
+								<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><span
 										class="tm-home-box-2-description box-3">Travel</span></a>
-								<a href="#" class="tm-home-box-2-link"><i
+								<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 										class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
 							</div>
 						</div>
@@ -498,11 +498,11 @@
 							<p class="tm-home-box-3-description"><b>Canada :</b> This place is a lush
 								green region with meandering rivers, snow-clad peaks and offers complete serenity.</p>
 							<div class="tm-home-box-2-container">
-								<a href="#" class="tm-home-box-2-link"><i
+								<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 										class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
-								<a href="#" class="tm-home-box-2-link"><span
+								<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><span
 										class="tm-home-box-2-description box-3">Travel</span></a>
-								<a href="#" class="tm-home-box-2-link"><i
+								<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 										class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
 							</div>
 						</div>
@@ -516,11 +516,11 @@
 						<div class="tm-home-box-3-info">
 							<p class="tm-home-box-3-description"><b>Mauritius :</b> This is a beautiful place for a holiday destination. Beaches here are the main highlights</p>
 							<div class="tm-home-box-2-container">
-								<a href="#" class="tm-home-box-2-link"><i
+								<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 										class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
-								<a href="#" class="tm-home-box-2-link"><span
+								<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><span
 										class="tm-home-box-2-description box-3">Travel</span></a>
-								<a href="#" class="tm-home-box-2-link"><i
+								<a href="http://wa.link/gzzbm6" class="tm-home-box-2-link"><i
 										class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
 							</div>
 						</div>
